--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -86,7 +86,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="#">
+                                <a class="dropdown-item" href="{{ path('app_user_favorites') }}">
                                     <i class="bi bi-heart"></i> Favoris
                                 </a>
                             </li>
